add broken album page

--- a/outPutSearch.html
+++ b/outPutSearch.html
@@ -451,6 +451,7 @@
     </div>
     <!-- fine parte principale + phone -->
 
+    <!-- artist row -->
     <div class="ms-4 d-none d-md-block">
         <p class="fw-bold ms-4 mb-3 margin-top font-size-high">Artisti</p>
         <div class=" fan row mt-1">
@@ -499,6 +500,7 @@
 
         </div>
     </div>
+    <!-- album row -->
     <div class="ms-4 d-none d-md-block margin-bottom">
         <div>
             <p class="fw-bold ms-4 mb-3 margin-top font-size-high">Album</p>
