semi functional search mobile

--- a/index.html
+++ b/index.html
@@ -261,17 +261,21 @@
           <button type="button" class="btn btn-outline-secondary btn-sm border-0 fw-bold btnSection">VISUALIZZA
             TUTTO</button>
         </div>
-        <!--   <div id="album-row" class="row">
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
+
+      </section>
+      <!-- soluzione delle 1.44 by francesco margotta -->
+      <section class="container">
+        <div id="album-rows" class="row">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4">
             <div class="card border-0">
               <img src="assets/imgs/main/image-19.jpg" class="card-img p-3" alt="imgPlaylist">
               <div class="card-body">
-                <h5 class="card-title">Titolo playlist</h5>
+                <h5 class="card-title">PRova</h5>
                 <p class="card-text text-secondary"> Descrizione playlist</p>
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4">
             <div class="card border-0">
               <img src="assets/imgs/main/image-15.jpg" class="card-img p-3" alt="imgPlaylist">
               <div class="card-body">
@@ -280,7 +284,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4 d-none d-md-block">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 d-none d-md-block">
             <div class="card border-0">
               <img src="assets/imgs/main/image-16.jpg" class="card-img p-3" alt="imgPlaylist">
               <div class="card-body">
@@ -289,7 +293,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4 d-none d-lg-block">
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 d-none d-lg-block">
             <div class="card border-0">
               <img src="assets/imgs/main/image-17.jpg" class="card-img p-3" alt="imgPlaylist">
               <div class="card-body">
@@ -298,162 +302,62 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4 d-none d-xl-block">
-            <div class="card border-0">
-              <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" alt="imgPlaylist">
-              <div class="card-body">
-                <h5 class="card-title">Titolo playlist</h5>
-                <p class="card-text text-secondary"> Descrizione playlist</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4 d-none d-xl-block">
-            <div class="card border-0">
-              <img src="assets/imgs/main/image-10.jpg" class="card-img p-3" alt="imgPlaylist">
-              <div class="card-body">
-                <h5 class="card-title">Titolo playlist</h5>
-                <p class="card-text text-secondary"> Descrizione playlist</p>
-              </div>
-            </div>
-          </div>
-        </div> -->
-
-        <!-- 
-        
-
-                <div class="under card col-5 me-4 ms-4 col-md-2 mb-2">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-5 col-md-2 mb-2">
-            <img src="assets/imgs/search/image-14.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2018 • Singolo</p>
-            </div>
-          </div>
-          <div class="under card col-5 me-4 ms-4 col-md-2 mb-2">
-            <img src="assets/imgs/search/image-15.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2023 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-5 col-md-2 mb-2">
-            <img src="assets/imgs/search/image-18.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2021 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-5 me-4 ms-4 col-md-2 mb-2">
-            <img src="assets/imgs/search/image-20.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2017 • Singolo</p>
-            </div>
-          </div>
-          <div class="under card col-5 d-md-none col-md-2 mb-2">
-            <img src="assets/imgs/search/image-5.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2011 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4  me-1">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4  me-1">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4  me-1">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4  me-1">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-          <div class="under card col-sm-6 col-md-4 col-lg-3 col-xl-2 mb-4  me-1">
-            <img src="assets/imgs/search/image-13.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">2020 • Album</p>
-            </div>
-          </div>
-
-        </div> -->
-
-
-        <!-- soluzione delle 1.44 by francesco margotta -->
-        <section class="container">
-          <div class="row d-flex justify-content-around flex-nowrap">
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2 sizeBoxPlaylist">
-              <div class="card border-0">
-                <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" style="width: 200px" alt="imgPlaylist">
-                <div class="card-body">
-                  <h5 class="card-title">Titolo playlist</h5>
-                  <p class="card-text text-secondary"> Descrizione playlist</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-sm-6 col-md-4 col-lg-2 sizeBoxPlaylist">
-              <div class="card border-0">
-                <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" style="width: 200px" alt="imgPlaylist">
-                <div class="card-body">
-                  <h5 class="card-title">Titolo playlist</h5>
-                  <p class="card-text text-secondary"> Descrizione playlist</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4 col-lg-2 d-none d-md-block sizeBoxPlaylist">
-              <div class="card border-0">
-                <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" style="width: 200px" alt="imgPlaylist">
-                <div class="card-body">
-                  <h5 class="card-title">Titolo playlist</h5>
-                  <p class="card-text text-secondary"> Descrizione playlist</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-2 d-none d-lg-block sizeBoxPlaylist">
-              <div class="card border-0">
-                <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" style="width: 200px" alt="imgPlaylist">
-                <div class="card-body">
-                  <h5 class="card-title">Titolo playlist</h5>
-                  <p class="card-text text-secondary"> Descrizione playlist</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-xl-2 d-none d-xl-block sizeBoxPlaylist">
-              <div class="card border-0">
-                <img src="assets/imgs/main/image-18.jpg" class="card-img p-3" style="width: 200px" alt="imgPlaylist">
-                <div class="card-body">
-                  <h5 class="card-title">Titolo playlist</h5>
-                  <p class="card-text text-secondary"> Descrizione playlist</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+        </div>
       </section>
+
       <section class="d-none d-sm-block m-4">
+        <div class="d-flex justify-content-between">
+          <h4>I tuoi Artisti Preferiti</h4>
+          <button type="button" class="btn btn-outline-secondary btn-sm border-0 fw-bold btnSection">VISUALIZZA
+            TUTTO</button>
+        </div>
+
+      </section>
+      <!-- soluzione delle 1.44 by francesco margotta -->
+      <section class="container">
+        <div id="artist-rows" class="row">
+
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4">
+            <div class="card border-0">
+              <img src="assets/imgs/main/image-19.jpg" class="card-img p-3" alt="imgPlaylist">
+              <div class="card-body">
+                <h5 class="card-title">Titolo playlist</h5>
+                <p class="card-text text-secondary"> Descrizione playlist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4">
+            <div class="card border-0">
+              <img src="assets/imgs/main/image-15.jpg" class="card-img p-3" alt="imgPlaylist">
+              <div class="card-body">
+                <h5 class="card-title">Titolo playlist</h5>
+                <p class="card-text text-secondary"> Descrizione playlist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 d-none d-md-block">
+            <div class="card border-0">
+              <img src="assets/imgs/main/image-16.jpg" class="card-img p-3" alt="imgPlaylist">
+              <div class="card-body">
+                <h5 class="card-title">Titolo playlist</h5>
+                <p class="card-text text-secondary"> Descrizione playlist</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 mb-4 d-none d-lg-block">
+            <div class="card border-0">
+              <img src="assets/imgs/main/image-17.jpg" class="card-img p-3" alt="imgPlaylist">
+              <div class="card-body">
+                <h5 class="card-title">Titolo playlist</h5>
+                <p class="card-text text-secondary"> Descrizione playlist</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <!--   <section class="d-none d-sm-block m-4">
         <div class="d-flex justify-content-between">
           <h4>Altro di ciò che ti piace</h4>
           <button type="button" class="btn btn-outline-secondary btn-sm border-0 fw-bold btnSection">VISUALIZZA
@@ -515,7 +419,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
     </div>
   </main>
