--- a/album.html
+++ b/album.html
@@ -125,7 +125,7 @@
                             <img class="rounded-circle img-fluid ps-xl-0 me-xl-1 pb-xl-0 ms-lg-0 me-md-3 me-sm-2 me-2"
                                 src="./assets/img/17311054_593721197499056_7691838617701452763_o.jpg" width="22"
                                 height="22">
-                            <span class="fw-semibold">Pinguini Tattici Nucleari&nbsp;</span>
+                            <span id="hero-name" class="fw-semibold">Pinguini Tattici Nucleari&nbsp;</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor"
                                 viewBox="0 0 16 16" class="bi bi-dot d-none d-lg-inline">
                                 <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"></path>
